# python-blackbaud

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  pyproject.toml  setup.py
blackbaud/authentication/: exceptions.py  protocols.py  settings.py
blackbaud/client/: __init__.py  client.py  resources.py  session.py  settings.py
blackbaud/client/rate_limiters/: default.py  protocols.py
blackbaud/school/: settings.py
blackbaud/school/endpoints/: academics.py  activities.py  admissions.py  advisories.py  attendance.py  core.py  events.py  medical.py  schedules.py  users.py
src/blackbaud/authentication/: managers.py  protocols.py
src/blackbaud/client/: client.py
