[tool.poetry]
name = "blackbaud"
version = "0.1.0"
description = ""
authors = ["Ömer Boratav <oboratav@stjohns.bc.ca>"]
readme = "README.md"
packages = [{include = "blackbaud"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
limits = "^2.7.1"
lxml = "^4.9.2"
requests-cache = {extras = ["json", "redis"], version = "^1.0.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
sphinx-autodoc-typehints = "^1.19.5"
sphinx-autodoc-annotation = "^1.0-1"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
pylint = "^2.15.5"
responses = "^0.22.0"
fastjsonschema = "^2.16.2"
orjson = "^3.8.2"
Flask = "^2.2.2"
Jinja2 = "^3.1.2"
google-auth = "^2.16.0"
google-auth-httplib2 = "^0.1.0"
google-cloud-core = "^2.3.2"
google-cloud-storage = "^2.7.0"
google-api-core = "^2.11.0"
google-api-python-client = "^2.74.0"
requests-futures = "^1.0.0"
psycopg2-binary = "^2.9.5"
pytz = "^2022.7.1"
beautifulsoup4 = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
