[tool.poetry]
name = "blackbaud"
version = "1.0.0-alpha"
description = "A python module to make the SKY API easier to work with"
authors = ["Ömer Boratav <oboratav@stjohns.bc.ca>"]
readme = "README.md"
packages = [{include = "blackbaud"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
limits = "^2.7.1"
lxml = "^5.2"
requests-cache = {extras = ["json", "redis"], version = "^1.0.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^3.3.2"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
sphinx-autodoc-typehints = "^1.19.5"
sphinx-autodoc-annotation = "^1.0-1"
black = "^22.10.0"
ruff = "^0.0.269"
mypy = "^0.982"
pylint = "^2.15.5"
responses = "^0.22.0"
requests-futures = "^1.0.0"
pytz = "^2022.7.1"
beautifulsoup4 = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9.
target-version = "py39"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''
